--- a/apps/rivendell/package.json
+++ b/apps/rivendell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rivendell",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Preprocessor for monorepo CI configs.",
   "engines": {
     "node": ">=16.15",
@@ -41,7 +41,8 @@
     }
   },
   "bin": {
-    "rivendell": "./cli.mjs"
+    "rivendell": "./cli.mjs",
+    "rivendell-dist": "./dist/cli.js"
   },
   "dependencies": {
     "ajv": "^8.11.0",
