--- a/root/jacobley/package.json
+++ b/root/jacobley/package.json
@@ -21,6 +21,7 @@
     "coverage": "rushx instrument && nyc mocha ./nyc/tests/unit",
     "instrument": "nyc instrument --nycrc-path=nyc.instrument.cjs ./dist ./nyc",
     "lint": "rush lint-package",
+    "rivendell": "rivendell-dist",
     "test": "echo NO TESTS YET",
     "unit-test": "mocha ./dist/tests/unit"
   },
@@ -42,6 +43,7 @@
     "named-patch": "workspace:^",
     "packages-list": "workspace:^",
     "rivendell": "workspace:^",
+    "rivendell-dist": "npm:rivendell@0.2.0",
     "typescript": "4.7.1-rc",
     "yargs": "^17.4.1"
   },
