Use rivendell to detect changes

--- a/rivendell/.github/workflows/build-and-test.yaml
+++ b/rivendell/.github/workflows/build-and-test.yaml
@@ -109,11 +109,9 @@ jobs:
       # If a package has not changed since
       - name: Check if package has changes
         id: rivendell
+        working-directory: root/jacobley
         run: |
-          echo "::set-output name=changed::true"
-          exit 0
-          # TODO run rivendell to check
-          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`${{ github.workspace }}/common/scripts/install-run-rushx.js --quiet rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
 
       - if: steps.rivendell.outputs.changed == 'true'
@@ -148,11 +146,9 @@ jobs:
       # Generate a hash that specifies "state" of package + dependencies
       - name: Calculate dependency hash
         id: rivendell
+        working-directory: root/jacobley
         run: |
-          echo "::set-output name=hash::${{ github.sha }}"
-          exit 0
-          # TODO use rivendell to hash
-          HASH=`npx rivendell hash ${{ matrix.package.name }}`
+          HASH=`${{ github.workspace }}/common/scripts/install-run-rushx.js --quiet rivendell hash ${{ matrix.package.name }}`
           echo "::set-output name=hash::${HASH}"
 
       # Try to load a previously cached version of build (determined by hash)
@@ -207,13 +203,11 @@ jobs:
             done
 
       - name: Check if package has changes
-        run: |
-          echo "::set-output name=changed::true"
-          exit 0
-          # TODO use rivendell
-          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
-          echo "::set-output name=changed::${CHANGED}"
         id: rivendell
+        working-directory: root/jacobley
+        run: |
+          CHANGED=`${{ github.workspace }}/common/scripts/install-run-rushx.js --quiet rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          echo "::set-output name=changed::${CHANGED}"
 
       # If package has experienced changes, test package
       - if: steps.rivendell.outputs.changed == 'true'
