Don't explicitly declare dist executable

--- a/apps/rivendell/package.json
+++ b/apps/rivendell/package.json
@@ -41,8 +41,7 @@
     }
   },
   "bin": {
-    "rivendell": "./cli.mjs",
-    "rivendell-dist": "./dist/cli.js"
+    "rivendell": "./cli.mjs"
   },
   "dependencies": {
     "ajv": "^8.11.0",
