--- a/tools/root-package-json/tsconfig.json
+++ b/tools/root-package-json/tsconfig.json
@@ -6,6 +6,6 @@
     "tsBuildInfoFile": "dist/.tsbuildinfo"
   },
   "references": [
-    { "path": "../parse-cwd" }
+    { "path": "../find-import" }
   ]
 }
