--- a/tools/packages-list/tsconfig.json
+++ b/tools/packages-list/tsconfig.json
@@ -6,6 +6,7 @@
     "tsBuildInfoFile": "dist/.tsbuildinfo"
   },
   "references": [
+    { "path": "../find-import" },
     { "path": "../named-patch" },
     { "path": "../root-package-json" }
   ]
