Use custom find-import for package

--- a/apps/barrelify/tsconfig.json
+++ b/apps/barrelify/tsconfig.json
@@ -8,6 +8,7 @@
   "references": [
     { "path": "../../tools/default-import" },
     { "path": "../../tools/entry-script" },
+    { "path": "../../tools/find-import" },
     { "path": "../../tools/named-patch" },
     { "path": "../../tools/parse-cwd" }
   ]
