--- a/apps/barrelify/package.json
+++ b/apps/barrelify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barrelify",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Auto-generate TS barrel files.",
   "engines": {
     "node": ">=14",
@@ -44,10 +44,10 @@
   "dependencies": {
     "default-import": "workspace:^",
     "entry-script": "workspace:^",
+    "find-import": "workspace:^",
     "globby": "^13.1.1",
     "named-patch": "workspace:^",
     "parse-cwd": "workspace:^",
-    "read-pkg-up": "^9.1.0",
     "yargs": "^17.4.1"
   },
   "devDependencies": {
