--- a/tools/find-import/package.json
+++ b/tools/find-import/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.1",
   "description": "Find and load first instance of js/json in parent directories.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=8"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
