--- a/apps/barrelify/package.json
+++ b/apps/barrelify/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.1",
   "description": "Auto-generate TS barrel files.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=8"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
