--- a/apps/juniper/package.json
+++ b/apps/juniper/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.3",
   "description": "ESM JSON Schema builder for static Typescript inference.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=7"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
