--- a/tools/dependency-order/package.json
+++ b/tools/dependency-order/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.0",
   "description": "List monorepo packages in dependency order.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=7"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
