--- a/tools/entry-script/package.json
+++ b/tools/entry-script/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.1",
   "description": "Modular control for entry script execution.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=7"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
