--- a/tools/enum-to-array/package.json
+++ b/tools/enum-to-array/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.3",
   "description": "Convert Typescript Enums to a strongly typed array.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=7"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
