--- a/tools/root-package-json/package.json
+++ b/tools/root-package-json/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.0",
   "description": "Find the root package.json from an npm workspace.",
   "engines": {
-    "node": ">=14",
-    "npm": ">=8"
+    "node": ">=14"
   },
   "type": "module",
   "author": "jacobley",
