Use find-import in rivendell

--- a/apps/rivendell/package.json
+++ b/apps/rivendell/package.json
@@ -52,6 +52,7 @@
     "default-import": "workspace:^",
     "dependency-order": "workspace:^",
     "entry-script": "workspace:^",
+    "find-import": "workspace:^",
     "juniper": "workspace:^",
     "minimatch": "^5.0.1",
     "named-patch": "workspace:^",
