--- a/root/jacobley/package.json
+++ b/root/jacobley/package.json
@@ -43,10 +43,10 @@
     "packages-list": "workspace:^",
     "rivendell": "workspace:^",
     "rivendell-npm": "npm:rivendell@0.3.1",
-    "typescript": "4.7.1-rc",
+    "typescript": "4.7.2",
     "yargs": "^17.4.1"
   },
   "overrides": {
-    "typescript": "4.7.1-rc"
+    "typescript": "4.7.2"
   }
 }
