--- a/tools/find-import/package.json
+++ b/tools/find-import/package.json
@@ -48,6 +48,6 @@
     "expect-type": "0.13.0",
     "mocha": "10.0.0",
     "nyc": "15.1.0",
-    "typescript": "4.7.1-rc"
+    "typescript": "4.7.2"
   }
 }
