--- a/tools/packages-list/package.json
+++ b/tools/packages-list/package.json
@@ -56,6 +56,6 @@
     "mocha": "10.0.0",
     "nyc": "15.1.0",
     "sinon": "14.0.0",
-    "typescript": "4.7.1-rc"
+    "typescript": "4.7.2"
   }
 }
