--- a/apps/barrelify/package.json
+++ b/apps/barrelify/package.json
@@ -56,18 +56,18 @@
     "yargs": "^17.4.1"
   },
   "devDependencies": {
-    "@types/chai": "4.3.1",
-    "@types/dedent": "0.7.0",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "@types/sinon": "10.0.11",
-    "@types/yargs": "17.0.10",
-    "chai": "4.3.6",
-    "dedent": "0.7.0",
-    "expect-type": "0.13.0",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "sinon": "14.0.0",
-    "typescript": "4.7.2"
+    "@types/chai": "^4.3.1",
+    "@types/dedent": "^0.7.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "@types/sinon": "^10.0.11",
+    "@types/yargs": "^17.0.10",
+    "chai": "^4.3.6",
+    "dedent": "^0.7.0",
+    "expect-type": "^0.13.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "typescript": "^4.7.2"
   }
 }
