--- a/apps/juniper/package.json
+++ b/apps/juniper/package.json
@@ -46,17 +46,17 @@
     "escape-string-regexp": "4 - 5"
   },
   "devDependencies": {
-    "@types/chai": "4.3.1",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "@types/sinon": "10.0.11",
-    "ajv": "8.11.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "@types/sinon": "^10.0.11",
+    "ajv": "^8.11.0",
     "default-import": "workspace:^",
-    "chai": "4.3.6",
-    "expect-type": "0.13.0",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "sinon": "14.0.0",
-    "typescript": "4.7.2"
+    "chai": "^4.3.6",
+    "expect-type": "^0.13.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "typescript": "^4.7.2"
   }
 }
