--- a/root/jacobley/package.json
+++ b/root/jacobley/package.json
@@ -25,28 +25,28 @@
     "unit-test": "mocha ./dist/tests/unit"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "1.1.3",
-    "@types/node": "17.0.35",
-    "@types/yargs": "17.0.10",
-    "@typescript-eslint/eslint-plugin": "5.26.0",
-    "@typescript-eslint/parser": "5.26.0",
+    "@rushstack/eslint-patch": "^1.1.3",
+    "@types/node": "^17.0.35",
+    "@types/yargs": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "default-import": "workspace:^",
     "dependency-order": "workspace:^",
     "entry-script": "workspace:^",
-    "eslint": "8.16.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "39.3.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-sonarjs": "0.13.0",
-    "eslint-plugin-unicorn": "42.0.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "eslint-plugin-unicorn": "^42.0.0",
     "named-patch": "workspace:^",
     "packages-list": "workspace:^",
     "rivendell": "workspace:^",
-    "rivendell-npm": "npm:rivendell@0.3.1",
-    "typescript": "4.7.2",
+    "rivendell-npm": "npm:rivendell@^0.3.1",
+    "typescript": "^4.7.2",
     "yargs": "^17.4.1"
   },
   "overrides": {
-    "typescript": "4.7.2"
+    "typescript": "^4.7.2"
   }
 }
