--- a/tools/default-import/package.json
+++ b/tools/default-import/package.json
@@ -1,6 +1,6 @@
 {
   "name": "default-import",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Properly handle CJS imports in ESM.",
   "engines": {
     "node": ">=14"
@@ -40,13 +40,13 @@
     }
   },
   "devDependencies": {
-    "@types/chai": "4.3.1",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "chai": "4.3.6",
-    "expect-type": "0.13.0",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "typescript": "4.7.2"
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "chai": "^4.3.6",
+    "expect-type": "^0.13.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "typescript": "^4.7.2"
   }
 }
