--- a/tools/find-import/package.json
+++ b/tools/find-import/package.json
@@ -41,13 +41,13 @@
     "parse-cwd": "workspace:^"
   },
   "devDependencies": {
-    "@types/chai": "4.3.1",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "chai": "4.3.6",
-    "expect-type": "0.13.0",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "typescript": "4.7.2"
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "chai": "^4.3.6",
+    "expect-type": "^0.13.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "typescript": "^4.7.2"
   }
 }
