--- a/tools/named-patch/package.json
+++ b/tools/named-patch/package.json
@@ -40,15 +40,15 @@
     }
   },
   "devDependencies": {
-    "@types/chai": "4.3.1",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "@types/sinon": "10.0.11",
-    "chai": "4.3.6",
-    "expect-type": "0.13.0",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "sinon": "14.0.0",
-    "typescript": "4.7.2"
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "@types/sinon": "^10.0.11",
+    "chai": "^4.3.6",
+    "expect-type": "^0.13.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "typescript": "^4.7.2"
   }
 }
