--- a/tools/packages-list/package.json
+++ b/tools/packages-list/package.json
@@ -43,19 +43,19 @@
     "named-patch": "workspace:^",
     "parse-cwd": "workspace:^",
     "root-package-json": "workspace:^",
-    "which": "~2.0.2"
+    "which": "^2.0.2"
   },
   "devDependencies": {
-    "@microsoft/rush-lib": "5.71.0",
-    "@types/chai": "4.3.1",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "@types/sinon": "10.0.11",
-    "@types/which": "2.0.1",
-    "chai": "4.3.6",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "sinon": "14.0.0",
-    "typescript": "4.7.2"
+    "@microsoft/rush-lib": "^5.71.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "@types/sinon": "^10.0.11",
+    "@types/which": "^2.0.1",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "typescript": "^4.7.2"
   }
 }
