--- a/tools/root-package-json/package.json
+++ b/tools/root-package-json/package.json
@@ -41,12 +41,12 @@
     "find-import": "workspace:^"
   },
   "devDependencies": {
-    "@types/chai": "4.3.1",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.35",
-    "chai": "4.3.6",
-    "mocha": "10.0.0",
-    "nyc": "15.1.0",
-    "typescript": "4.7.2"
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "typescript": "^4.7.2"
   }
 }
