--- a/.github/workflows/publish-dev.yaml
+++ b/.github/workflows/publish-dev.yaml
@@ -40,6 +40,9 @@ jobs:
           - name: find-import
             safe-name: find-import
             path: tools/find-import
+          - name: iso-crypto
+            safe-name: iso-crypto
+            path: tools/iso-crypto
           - name: juniper
             safe-name: juniper
             path: apps/juniper
