Add punycode to ci (rivendell)

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -100,6 +100,9 @@ jobs:
           - name: parse-cwd
             safe-name: parse-cwd
             path: tools/parse-cwd
+          - name: punycode-esm
+            safe-name: punycode-esm
+            path: tools/punycode-esm
           - name: static-emitter
             safe-name: static-emitter
             path: tools/static-emitter
@@ -219,6 +222,9 @@ jobs:
           - name: parse-cwd
             safe-name: parse-cwd
             path: tools/parse-cwd
+          - name: punycode-esm
+            safe-name: punycode-esm
+            path: tools/punycode-esm
           - name: static-emitter
             safe-name: static-emitter
             path: tools/static-emitter
@@ -650,6 +656,9 @@ jobs:
           - name: parse-cwd
             safe-name: parse-cwd
             path: tools/parse-cwd
+          - name: punycode-esm
+            safe-name: punycode-esm
+            path: tools/punycode-esm
           - name: static-emitter
             safe-name: static-emitter
             path: tools/static-emitter
