--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,7 @@
         "allowUnusedLabels": false,
         "composite": true,
         "declaration": true,
-        "declarationMap": false,
+        "declarationMap": true,
         "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
         "importsNotUsedAsValues": "remove",
