Disable source maps in CI build Any deployed packages omit the maps, so any references are misleading. And there is no benefit to maps in a non-local/dev environment

--- a/rivendell/github-workflows/build-and-test.yaml
+++ b/rivendell/github-workflows/build-and-test.yaml
@@ -161,7 +161,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
