--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -262,7 +262,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
@@ -329,7 +329,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
@@ -390,7 +390,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
@@ -448,7 +448,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
@@ -506,7 +506,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
@@ -564,7 +564,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
@@ -622,7 +622,7 @@ jobs:
       # If cache missed build the package
       - if: steps.hash-build.outputs.cache-hit != 'true'
         working-directory: ${{ matrix.package.path }}
-        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build
+        run: node ${{ github.workspace }}/common/scripts/install-run-rushx.js build --sourceMap false --declarationMap false
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
